Add trailer to DCON website

--- a/dcon-2016/index.html
+++ b/dcon-2016/index.html
@@ -51,7 +51,9 @@ $('.scroll-arrow a').click(function (e) {
 
 		<p>Throughout the weekend, agents of service will enter contests, attend workshops, receive recognition for their accomplishments, participate in onsite service projects, and elect the next district executive board. There will also be dances held on Friday and Saturday nights&mdash;and the beach is right next door!</p>
 
-		<div class="button uppercase expand"><a href="/registration">Sign me up</a></div>
+		<p>Check out the official DCON 2016 Trailer below.</p>
+
+		<center><iframe src="https://www.youtube.com/embed/1BKJucTlbNo" frameborder="0" allowfullscreen></iframe></center>
 
 	</div>
 	
@@ -70,8 +72,8 @@ $('.scroll-arrow a').click(function (e) {
 	
 	<div class="content">
 		<h1 class="uppercase expand">Contests & Awards</h1>
-		<p>DCON is a time for honoring Key Club members for their hard work, dedication, talents, and achievements over the course of the service year. Contests include the <b>oratorical and essay contests</b>, and the <b>Talent Show</b>, an audience favorite. Some awards given to clubs and members include the <b>Distinguished Officer Awards</b>, the <b>100% CMRF Award,</b> the <b>Single Service Award,</b> and the <b>NJ Key Club Scholarships.</b> For more information about contests, contact Division 14 LTG <a href="mailto:ltg14.gonzalez@gmail.com">Stephania Gonzalez</a>. For more information about scholarships, contact Division 22 LTG <a href="mailto:ltg22.clarkin@gmail.com">Ciara Clarkin</a>.</p><br>
-		<div class="button uppercase expand"><a href="/contests">Contests Info</a></div><br><br>
+		<p>DCON is a time for honoring Key Club members for their hard work, dedication, talents, and achievements over the course of the service year. Contests include the oratorical and essay contests, and the Talent Show, an audience favorite. Some awards given to clubs and members include the Distinguished Officer Awards, the 100% CMRF Award, the Single Service Award, and the NJ Key Club Scholarships. For more information about contests, contact Division 14 LTG <a href="mailto:ltg14.gonzalez@gmail.com">Stephania Gonzalez</a>. For more information about scholarships, contact Division 22 LTG <a href="mailto:ltg22.clarkin@gmail.com">Ciara Clarkin</a>.</p><br>
+		<div class="button uppercase expand"><a href="/contests">See All Contests</a></div><br><br>
 		<div class="image"><img src="/img/2015-awards.jpg"></div>
 	</div>
 
@@ -101,7 +103,7 @@ $('.scroll-arrow a').click(function (e) {
 	
 	<div class="content">
 		<h1 class="uppercase expand">Service Projects</h1>
-		<p>There are opportunities to participate in service projects and fundraisers right at DCON, including the  ELIMINATE Walk down the boardwalk on Sunday morning! Stay tuned for more details.</p>
+		<p>There are opportunities to participate in service projects and fundraisers right at DCON—be sure to bring canned foods and nonperishables for our food drive, and bundle up for an ELIMINATE walk down the boardwalk on Sunday morning! Stay tuned for more details.</p>
 	</div>
 
 </div>
@@ -111,7 +113,7 @@ $('.scroll-arrow a').click(function (e) {
 	<div class="content">
 		<h1 class="uppercase expand">Registration</h1>
 		<p>Registration is $285 per member&mdash;clubs that register before the early deadline of <b>February 12, 2016</b> will receive a $5 discount per member registered. Contact District Treasurer <a href="mailto:treasurer.boettinger@gmail.com">Bobbie Boettinger</a> for any questions.<br>
-		<div class="button uppercase expand"><a href="/registration">Registration Info</a></div>
+		<div class="button uppercase expand"><a href="/registration">More Info</a></div>
 	</div>
 
 </div>
