Update contests, add February blog posts

--- a/dcon-2016/contests/index.html
+++ b/dcon-2016/contests/index.html
@@ -123,27 +123,27 @@ class: contests
 		<h1 class="uppercase expand">Prejudged Contests</h1>
 
 		<p><b>Club Website Award</b>
-		<br><i>Due Due March 7th</i>
+		<br><i>Due March 7th</i>
 		<br>This award honors the Key Club and its Webmaster. The website is judged based on layout, content, photos, Key Club logos, font size, general attractiveness, and loading speed of the site. To enter, please fill out the entry form on page 12 of the Contests Packet.</p>
 
 		<p><b>Single Service Award</b> 
-		<br><i>Due Due March 7th</i>
+		<br><i>Due March 7th</i>
 		<br>This award recognizes individual Key Clubs for their single best project. A qualifying project will be defined as a club service project, planned, organized and produced by the Key Club occurring on a single day, consecutive days or recurring on different days. Projects acceptable for this award may include both hands-on service projects and fundraising efforts. There are three categories for this award. Platinum has 86 or more members, gold has 61 to 85, silver has 36 to 60, and bronze has 35 or less. Criteria for judging include: Service need, Project plan, Project implementation, final results, public awareness, and members' participation. To enter this award, please fill out the form on page 13 of the Contests Packet and submit it with a complete report.</p>
 
 		<p><b>Club Bulletin Award</b> 
-		<br><i>Due Due March 7th</i>
+		<br><i>Due March 7th</i>
 		<br>This award recognizes Key Club editors. It recognizes the THREE best NJ Key Club newsletters.            A minimum of 8 issues should be submitted in a 3 ring binder. The entry form on page 14 of the Contests Packet must be included in the binder.</p>
 
 		<p><b>Kiwanis Family Relations Award</b>
-		<br><i>Due Due March 7th</i>
+		<br><i>Due March 7th</i>
 		<br>This award is for clubs with the best Kiwanis Family Relations. Please complete the form on page 15 of the Contests Packet along with descriptions of the joint projects that are mentioned on the form. If there are multiple projects or multiple K Family Clubs, feel free to photo copy the form, or download it from the NJ Key Club Web Site to submit more. There are 1st , 2nd , and 3rd places for this award.</p>
 
 		<p><b>Major Emphasis Program Award</b> 
-		<br><i>Due Due March 7th</i>
+		<br><i>Due March 7th</i>
 		<br>This award is given to the Key Club with the best Major Emphasis Project. This year’s theme has been continued to Live 2 Learn. There will be first, second and third place awards given. Please complete the form on page 16 of the packet.</p>
 
 		<p><b>Club Achievement Award</b> 
-		<br><i>Due Due March 7th</i>
+		<br><i>Due March 7th</i>
 		<br>This award recognizes the most outstanding clubs based on overall service leadership as specified by their Annual Achievement RF. If you are attending DCON, failure to submit this form on time will result in disqualification from all other contests. Annual Achievement RFs were sent out as a part of the November District Mailing and can be found online at njkeyclub.org. Clubs will be categorized based on membership. Platinum is 86 or more members, gold is 62 to 85 members, silver is 36 to 60 members, and bronze is 35 or members or less.</p>
 
 	</div>
