--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@ layout: home
 title: New Jersey District | Key Club
 home: true
 ---
+
 <div class="dcon-ad">
-	<a href="//dcon.njkeyclub.org/"><h1>(1) new message from NJ Key Club Headquarters</h1></a>
+	<a href="//dcon.njkeyclub.org/"><h1>(1) new message from NJ Key Club Headquarters</h1><h3>akshaya was here</h3></a>
 </div>
 
 <div id="instafeed">
