bye bye secret message

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ home: true
 ---
 
 <div class="dcon-ad">
-	<a href="//dcon.njkeyclub.org/"><h1>(1) new message from NJ Key Club Headquarters</h1><h3>akshaya was here</h3></a>
+	<a href="//dcon.njkeyclub.org/"><h1>(1) new message from NJ Key Club Headquarters</h1></a>
 </div>
 
 <div id="instafeed">
