Start add page and add schedule

--- a/dcon-2016/index.html
+++ b/dcon-2016/index.html
@@ -103,7 +103,7 @@ $('.scroll-arrow a').click(function (e) {
 	
 	<div class="content">
 		<h1 class="uppercase expand">Service Projects</h1>
-		<p>There are opportunities to participate in service projects and fundraisers right at DCON—be sure to bring canned foods and nonperishables for our food drive, and bundle up for an ELIMINATE walk down the boardwalk on Sunday morning! Stay tuned for more details.</p>
+		<p>There are opportunities to participate in service projects and fundraisers right at DCON—be sure to bring canned foods and nonperishables for our food drive, and bundle up for a Hunger Walk down the boardwalk on Sunday morning! Stay tuned for more details.</p>
 	</div>
 
 </div>
