Add Dress Code video and March District Mailing

--- a/resources/district-resources/index.html
+++ b/resources/district-resources/index.html
@@ -18,6 +18,11 @@ class: district-resources
             </li>-->
 
             <li>
+                <h3><a href="//www.youtube.com/watch?v=AHodKwYMCSg">DCON Dress Code Video</a></h3>
+                <p>Coming to DCON 2016? Check out the dress code video here!</p>
+            </li>
+
+            <li>
                 <h3><a href="/downloads/district-resources/for-everyone/2016-17 Elections and Campaigning Packet.pdf">2016-17 Elections and Campaigning Packet (PDF)</a></h3>
                 <p>Running for a district board position this year? Check out the elections packet by clicking the link above!</p>
             </li>
@@ -339,6 +344,10 @@ class: district-resources
 
             <li>
                 <h3><a href="https://drive.google.com/folderview?id=0Bwri5IsO8xpmVHNSY2I2V0FDV1U&usp=sharing">2016 February District Mailing</a></h3>
+            </li>
+
+            <li>
+                <h3><a href="https://drive.google.com/folderview?id=0Bwri5IsO8xpmSkJtYV9iUE1NSUk&usp=sharing">2016 March District Mailing</a></h3>
             </li>
 
         </ul>
