Final edits to Live Page

--- a/dcon-2016/live/index.html
+++ b/dcon-2016/live/index.html
@@ -44,14 +44,16 @@
 	<div class="main" ng-controller="MainController">
 
 		<div class="col-md-4" id="stream">
-			<h1 class="uppercase expand">livestream</h1>
+			<h1 class="uppercase expand">trailer</h1>
 			<div>
-				<iframe width="345" height="193" src="https://www.youtube.com/embed/jBSHhFcRNM4" frameborder="0" allowfullscreen></iframe>
+				<iframe width="450" height="252" src="https://www.youtube.com/embed/jBSHhFcRNM4" frameborder="0" allowfullscreen></iframe>
 			</div>
 		</div>
 
 		<div class="col-md-4" id="feed">
-			<h1 class="uppercase expand">#njdcon070</h1>
+			<h1 class="uppercase expand">tweets</h1>
+			<a class="twitter-timeline" href="https://twitter.com/hashtag/njdcon070" data-widget-id="708081564983414785">#njdcon070 Tweets</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</div>
 
 		<div class="col-md-4" id="resources">
